# kekris

./: .gitignore  LICENSE.md  NOTICE.md  README.md  astro.config.mjs  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyvenv.cfg  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250417121830_init.sql
src-tauri/src/: commands.rs  globals.rs  init_trace.rs  lib.rs
src-tauri/src/commands/: clockwise_rotation.rs  counter_clockwise_rotation.rs  exit_app.rs  forfeit_game.rs  full_rotation.rs  game_commands.rs  game_info_retreive.rs  hard_drop.rs  left_move.rs  mod.rs  retry_game.rs  right_move.rs  room_commands.rs  save_piece.rs  soft_drop.rs  start_game.rs  targeting_strategy_eliminations.rs  targeting_strategy_even.rs  targeting_strategy_payback.rs  targeting_strategy_random.rs
src-tauri/src/commands/room_commands/: client.rs  mod.rs  server.rs
src-tauri/src/game/: game_info.rs  game_options.rs  local_game.rs  mod.rs  online_game.rs  pieces.rs  remote_game.rs  sound.rs  strategy.rs
src-tauri/src/game/board/: cell.rs  danger_level.rs  local_board.rs  mod.rs
src-tauri/src/game/board/local_board/: mod.rs  moving_piece.rs  tests.rs
src-tauri/src/game/board/local_board/moving_piece/: mod.rs  moving_piece_i.rs  moving_piece_j.rs  moving_piece_l.rs  moving_piece_o.rs  (+3 more)
src-tauri/src/game/board/remote_board/: mod.rs
src-tauri/src/game/game_types/: client_online_game.rs  danger_tracker.rs  local_game.rs  mod.rs  online_game.rs  remote_game.rs
src-tauri/src/game/queue/: local_queue.rs  mod.rs  remote_queue.rs
src-tauri/src/helpers/: game_net_helpers.rs  mod.rs  room_net_helpers.rs
src-tauri/src/models/: dummy_room.rs  emit_game_info.rs  game_commands.rs  game_generic_info.rs  game_info.rs  game_options.rs  game_responses.rs  mod.rs  online_remote_game_communication.rs  other_player_state.rs  room_commands.rs  room_info.rs  won_signal.rs
src-tauri/src/models/online_game_commands/: client.rs  server.rs
src-tauri/src/models/room_commands/: client.rs  server.rs
src-tauri/src/persistence/: migrations.rs  mod.rs  retreive_game_info.rs  store_game_info.rs
src-tauri/src/room/: join_room.rs  listen_to_rooms.rs  mod.rs  player.rs
src-tauri/src/room/client/: client_room.rs  join_room.rs  listen_to_room_updates.rs  listen_to_rooms.rs  mod.rs
src-tauri/src/room/server/: listen_to_broadcast_requests.rs  listen_to_room_requests.rs  mod.rs  room_player_listener.rs  send_receive_room_updates.rs
(+134 files in other folders)
