[package]
name = "kekris"
version = "0.2.3"
description = "A Tetris clone"
authors = ["kinire98"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
color-eyre = "0.6.3"
tokio = { version = "1.44.2", features = ["full"] }
rodio = "0.20.1"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
local-ip-address = "0.6.3"
const_format = "0.2.34"
tokio-stream = "0.1.17"
futures-util = "0.3.31"

[dev-dependencies]
color-eyre = "0.6.3"


[profile.release]
build-override.opt-level = 3
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Optimize for binary size
strip = true

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

